--- a/css/styles.css
+++ b/css/styles.css
@@ -328,16 +328,10 @@ body {
 
 /* ============= footer form ============= */
 
-.udalit-potom {
-  border: 1px solid tomato;
-}
-.footer-form-container {
-  /* display: block;
-  padding-right: 215px; */
-}
 .newsletter-subscription-form {
   position: relative;
   display: flex;
+  
 }
 
 .newsletter-subscription-form-title {
@@ -366,6 +360,7 @@ body {
   margin-right: 12px;
   padding-left: 16px;
   padding-right: 16px;
+  color: #ffffff;
 
   outline: 0;
   outline-offset: 0;
@@ -893,8 +888,8 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
   padding: 40px;
   background-color: #ffffff;
 
@@ -953,19 +948,16 @@ body {
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--primary-text-color);
+  display: block;
   margin-bottom: 4px;
 }
 
-.modal-input-container {
-  position: relative;
-  margin-top: 4px;
-}
-
 .modal-form-label {
+  position: relative;
   margin-bottom: 10px;
 }
 
-.modal-input {
+.modal-input {  
   width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -983,7 +975,7 @@ body {
 
 .icon-modal-form {
   position: absolute;
-  top: 50%;
+  top: 65%;
   left: 12px;
   transform: translateY(-50%);
   width: 18px;
@@ -1000,7 +992,7 @@ body {
 .modal-form-textarea {
   resize: none;
   width: 100%;
-  min-height: 120px;
+  height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -1065,6 +1057,10 @@ body {
   background-image: url(../images/icon/check.svg);
   background-size: contain;
   background-origin: border-box;
+  border: 2px solid var(--accent-text-color);
+}
+
+.modal-input-checkbox:focus + .modal-checkbox-label::before {
   border: 2px solid var(--accent-text-color);
 }
 
